objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACV__c</fullName>
        <description>In this field value rollup of contact ACV field. only those contract value add which contract has status is Active.</description>
        <label>ACV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AOV_Band__c</fullName>
        <label>AOV Band</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$25M+</fullName>
                </value>
                <value>
                    <fullName>$10M-25M</fullName>
                </value>
                <value>
                    <fullName>$5M-10M</fullName>
                </value>
                <value>
                    <fullName>$1M-5M</fullName>
                </value>
                <value>
                    <fullName>$600k-1M</fullName>
                </value>
                <value>
                    <fullName>$200k-600k</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA_MAPPER__Business_Identification_Number__c</fullName>
        <inlineHelpText>Please enter your Business Identification / VAT Number. This will be used for reverse charge VAT calculations.</inlineHelpText>
        <label>Business Identification Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_MAPPER__Entity_Use_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Entity use codes indicate the reason for exemption.</description>
        <inlineHelpText>Entity use codes indicate the reason for exemption.</inlineHelpText>
        <label>Entity/Use code</label>
        <referenceTo>AVA_MAPPER__Entity_Use_code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVA_MAPPER__Exemption_Number__c</fullName>
        <inlineHelpText>If you enter any data into this field their sales transactions will be exempt from sales tax.</inlineHelpText>
        <label>Exemption Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_MAPPER__Is_Seller_Importer_Of_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Seller is responsible for any import taxes and fees.</description>
        <inlineHelpText>If checked, Seller is responsible for any import taxes and fees.</inlineHelpText>
        <label>Is Seller Importer Of Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__AvaTaxCustomerStatus__c</fullName>
        <description>Displays the AvaTax Exemption customer status.</description>
        <formula>IMAGE(CASE(AVA_SFCPQ__AvaTaxMessage__c ,
&quot;Success&quot;, &quot;/img/msg_icons/confirm16.png&quot;,
&quot;Success: Email address is recommended&quot;, &quot;/img/msg_icons/confirm16.png&quot;,
&quot;Update customer to AvaTax Exemption&quot;, &quot;/img/msg_icons/warning16.png&quot;,
&quot;&quot;,&quot;/resource/not_available&quot;,
&quot;Error&quot;,&quot;/img/msg_icons/error16.png&quot;,
&quot;/img/msg_icons/error16.png&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the AvaTax Exemption customer status.</inlineHelpText>
        <label>AvaTax Customer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__AvaTaxMessage__c</fullName>
        <description>Displays the AvaTax responses or messages.</description>
        <inlineHelpText>Displays the AvaTax responses or messages.</inlineHelpText>
        <label>AvaTax Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__AvaTax_Exemption_Customer_ID__c</fullName>
        <description>A unique ID used by AvaTax to apply exemptions. Please do not enter new value or edit this field.</description>
        <inlineHelpText>A unique ID used by AvaTax to apply exemptions. Please do not enter new value or edit this field.</inlineHelpText>
        <label>AvaTax Exemption Customer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Business_Identification_Number__c</fullName>
        <label>Business Identification No(Deprecated)</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Email__c</fullName>
        <description>Primary email for the account.</description>
        <inlineHelpText>Primary email for the account.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__ExemptEntityType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Type of Entity/Use Code, if any, associated with this Account provided by Avalara. Optional Field.</description>
        <inlineHelpText>Type of Entity/Use Code, if any, associated with this Account. Optional Field.</inlineHelpText>
        <label>Entity/Use Code(Deprecated)</label>
        <referenceTo>AVA_SFCPQ__EntityUse__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Is_Seller_Importer_Of_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Seller Importer Of Record(Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__TaxExemptionCode__c</fullName>
        <description>This field will be used for AvaTax Exemption number</description>
        <inlineHelpText>Please enter exemption certification number, if any.</inlineHelpText>
        <label>Exemption Number(Deprecated)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Account Executive</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>startsWith</operation>
                <value>Salesforce.com, Inc. World</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>startsWith</operation>
                <value>Salesforce.com, Inc. US</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>startsWith</operation>
                <value>Salesforce.com Internal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Account Executive)</relationshipLabel>
        <relationshipName>AE_accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Health_Code_Summary__c</fullName>
        <label>Account Health Code Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Health_Color__c</fullName>
        <formula>If(Account_Health__c=&quot;Red&quot;, IMAGE(&quot;https://toppng.com/uploads/preview/red-dot-icon-png-bowling-ball-transparent-background-11562953794gu3xfby6c8.png&quot;, &quot;RED&quot;, 25,25), If(Account_Health__c=&quot;Yellow&quot;, IMAGE(&quot;https://img.pngio.com/filegaudit-yellowdotpng-wikimedia-commons-yellow-dot-png-460_460.png&quot;, &quot;YELLOW&quot;, 25,25), IMAGE(&quot;https://icon2.cleanpng.com/20180328/tsq/kisspng-circle-n-carpet-cleaning-upland-green-dot-corporat-dots-5abb905aa15890.9523326215222416266609.jpg&quot;, &quot;GREEN&quot;, 25,25)))</formula>
        <label>Account Health (Color)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Health_Next_Steps_Field__c</fullName>
        <label>Account Health Next Steps Field</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_Health__c</fullName>
        <label>Account Health</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewals Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RenewalsManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Manager_Role__c</fullName>
        <formula>Owner.Manager.UserRole.Name</formula>
        <label>Account Owner Manager Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Manager__c</fullName>
        <formula>Owner.Manager.FirstName  +&quot; &quot; +  Owner.Manager.LastName</formula>
        <label>Account Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <formula>Owner.FirstName &amp;&apos; &apos;&amp; Owner.LastName</formula>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Role__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <label>Account Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <label>Account Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>Links to an external Account Plan Document.</description>
        <inlineHelpText>Link to Account Plan.</inlineHelpText>
        <label>Account Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Account_SHI__c</fullName>
        <description>Special Handling Instructions for cases related to the account.</description>
        <inlineHelpText>Please enter here the instructions or requirements that must be followed in cases related to this account. This instructions will be visible in all the cases linked to this account.</inlineHelpText>
        <label>Account SHI</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_score__c</fullName>
        <label>Account score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Opportunity__c</fullName>
        <formula>IF( No_Open_opportunities__c &gt; 0, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Products__c</fullName>
        <description>A summary of product types that the customer has purchased for easy reporting.</description>
        <label>Active Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise Edition</fullName>
                </value>
                <value>
                    <fullName>Unlimited Edition</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Branch Management</fullName>
                </value>
                <value>
                    <fullName>Selenium Testing</fullName>
                </value>
                <value>
                    <fullName>Compliance Hub</fullName>
                </value>
                <value>
                    <fullName>Professional Edition</fullName>
                    <isActive>false</isActive>
                    <label>Professional Edition</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Opportunities_are_Lost__c</fullName>
        <formula>AND(Opportunity_Count__c &gt; 0, IF(Sum_of_Probability__c &gt; 0, False, True))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked when Probability% is greater than 0.</inlineHelpText>
        <label>All Opportunities are Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Lead_Convert__c</fullName>
        <label>Allow_Lead_Convert</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>April_External_ID__c</fullName>
        <label>April_External_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Deals__c</fullName>
        <description>This Field is Created as Part of Qentinal Data Migration</description>
        <label>Associated Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Relationship_Score__c</fullName>
        <label>Best Relationship Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Best Relationship</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Name__c</fullName>
        <label>Billing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__BW_Account_Status__c</fullName>
        <formula>IF( Bread_Winner__Total_Amount_Invoiced__c = 0, 
IMAGE ( &quot;https://bw-cdn.s3.amazonaws.com/never-billed.png&quot;,&quot;Never Billed&quot;), 

IF( Bread_Winner__Total_Amount_Overdue__c &gt; 0, 
IMAGE ( &quot;https://bw-cdn.s3.amazonaws.com/overdue.png&quot;,&quot;Overdue&quot;), 

IF( Bread_Winner__Total_Amount_Due__c &gt; 0, 
IMAGE ( &quot;https://bw-cdn.s3.amazonaws.com/due.png&quot;,&quot;Due&quot;), 

IMAGE ( &quot;https://bw-cdn.s3.amazonaws.com/paid.png&quot;,&quot;Paid&quot;) 

) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BW Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Amount_Credit__c</fullName>
        <description>Total Amount Credited is sum of Amount Credited field in related Invoices. Amount Credited field in Invoice is the total amount allocated to Invoice via Credit Notes, Over Payments and Pre Payments</description>
        <label>Total Amount Credited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Amount_Due__c</fullName>
        <label>Total Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Amount_Invoiced__c</fullName>
        <label>Total Amount Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Amount_Overdue__c</fullName>
        <label>Total Amount Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Amount_Paid__c</fullName>
        <label>Total Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Draft_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total amount of draft invoices</description>
        <label>Total Draft Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Unallocated_Credit__c</fullName>
        <label>Total Unallocated Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Review_Cadence__c</fullName>
        <label>Business Review Cadence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CE_Account_Owner__c</fullName>
        <description>Copado Engage field to show Account Owner as text to enable TopBox to pull full name from Salesforce.</description>
        <formula>Owner.FirstName+&quot; &quot;+Owner.LastName</formula>
        <label>CE - Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_CSM_Email_Subdomain__c</fullName>
        <description>Copado Engage formula extracts portion of CSM email address before &quot;@&quot; and adds &quot;@ext.copado.com&quot;; field is pulled into TopBox.</description>
        <formula>LEFT(CE_CSM_Email__c,Find(&quot;@&quot;, CE_CSM_Email__c)-1)+&quot;@ext.copado.com&quot;</formula>
        <label>CE - CSM Email Subdomain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_CSM_Email__c</fullName>
        <formula>Customer_Success_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CE - CSM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_CSM_Name__c</fullName>
        <formula>Customer_Success_Manager__r.FirstName +&quot; &quot;+ Customer_Success_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CE - CSM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_CSM_Phone__c</fullName>
        <description>Copado Engage field to show CSM phone number as text to enable TopBox to pull from Salesforce.</description>
        <formula>Customer_Success_Manager__r.Phone</formula>
        <label>CE - CSM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Executive_Sponsor__c</fullName>
        <description>Copado Engage field to show Executive Sponsor as text to enable TopBox to pull full name from Salesforce.</description>
        <formula>Executive_Sponsor1__r.FirstName+&quot; &quot;+ Executive_Sponsor1__r.LastName</formula>
        <label>CE - Executive Sponsor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Renewals_Manager__c</fullName>
        <description>Copado Engage field to show Renewals Manager as text to enable TopBox to pull full name from Salesforce.</description>
        <formula>Account_Manager__r.FirstName+&quot; &quot;+Account_Manager__r.LastName</formula>
        <label>CE - Renewals Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Handover_Date__c</fullName>
        <label>CS Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Tier__c</fullName>
        <description>CS Tiering to better track accounts</description>
        <inlineHelpText>CS Tiering to better track accounts/customer portfolio</inlineHelpText>
        <label>CS Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top</fullName>
                </value>
                <value>
                    <fullName>Mid</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Tech Touch</fullName>
                </value>
                <value>
                    <fullName>Scale</fullName>
                    <isActive>false</isActive>
                    <label>Scale</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClickDeploy_Salesforce_Org_Id__c</fullName>
        <label>ClickDeploy Salesforce Org Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Team_Subscription_ID__c</fullName>
        <description>This is an external ID field used to integrate ClickDeploy Accounts into Salesforce.</description>
        <externalId>true</externalId>
        <label>ClickDeploy Team Subscription ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Community_Login__c</fullName>
        <inlineHelpText>Last login date for any user under the account.</inlineHelpText>
        <label>Community Login</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Domain_Name__c</fullName>
        <description>This Field is created as part of Qentinal Data Migration</description>
        <label>Company Domain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Email__c</fullName>
        <description>Used to place company email from AppExchange into Business Account record.</description>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <description>This Field is Created as part of Qentinal Data Migration</description>
        <label>Company ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-2,500</fullName>
                </value>
                <value>
                    <fullName>2,501-5,000</fullName>
                </value>
                <value>
                    <fullName>5,001-7,500</fullName>
                </value>
                <value>
                    <fullName>7,501-10,000</fullName>
                </value>
                <value>
                    <fullName>10,001+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copado_AOV__c</fullName>
        <label>Copado TCV</label>
        <summarizedField>Opportunity.TCV__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won, Fully Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Copado_Solutions_Vendor_ID__c</fullName>
        <inlineHelpText>This is the vendor ID that we may receive from the customer</inlineHelpText>
        <label>Copado Solutions Vendor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account contact that the Copado Executive Sponsor will align with. For leader to leader relationship tracking.</description>
        <label>Customer Executive Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Customer Executive Sponsor)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Refenceable__c</fullName>
        <inlineHelpText>Can the customer be referenced?</inlineHelpText>
        <label>Customer Refenceable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Success_Last_Created_Date__c</fullName>
        <label>Customer Success Last Created Date</label>
        <summarizedField>Customer_Success__c.CreatedDate</summarizedField>
        <summaryForeignKey>Customer_Success__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The assigned copado customer success manager to the account.</description>
        <label>Customer Success Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Success__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Success</label>
        <referenceTo>Customer_Success__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DL_VC__DUNS__c</fullName>
        <label>DUNS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__JAM_Value_Cloud_Validated__c</fullName>
        <formula>NOT( ISBLANK( DL_VC__VC_Company_Id__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Cloud Jamaica Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DL_VC__VC_Company_Id__c</fullName>
        <externalId>true</externalId>
        <label>Value Cloud Company Id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__VC_Validated_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Value Cloud Validated</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DL_VC__VC_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value Cloud Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Team_Size__c</fullName>
        <label>Delivery Team Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DevOps__c</fullName>
        <label>DevOps Maturity Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBQ_Added__c</fullName>
        <label>EBQ Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Cadence__c</fullName>
        <label>EBQ Cadence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>B5</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
                <value>
                    <fullName>D5</fullName>
                </value>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>E2</fullName>
                </value>
                <value>
                    <fullName>E3</fullName>
                </value>
                <value>
                    <fullName>E4</fullName>
                </value>
                <value>
                    <fullName>E5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EBQ_Cycle__c</fullName>
        <label>EBQ Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBQ_Rep2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EBQ Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <description>To designate where customers are based</description>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                    <default>true</default>
                    <label>USA</label>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Sponsor1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <label>Executive Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ted Elliott</fullName>
                </value>
                <value>
                    <fullName>Sanjay Gidwani</fullName>
                </value>
                <value>
                    <fullName>David Brooks</fullName>
                </value>
                <value>
                    <fullName>Federico Larson</fullName>
                </value>
                <value>
                    <fullName>Philipp Rackwitz</fullName>
                </value>
                <value>
                    <fullName>Andrew Leigh</fullName>
                </value>
                <value>
                    <fullName>Arwa Kaddoura</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exhausted_Reason__c</fullName>
        <description>Related to this user story: US-0023977</description>
        <label>Exhausted Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exhausted_Until__c</fullName>
        <description>Related to this user story: US-0023977</description>
        <label>Exhausted Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FB_Company_Key__c</fullName>
        <label>FB Company Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Territory_Path__c</fullName>
        <formula>fcio1__Territory__r.fcio1__L2_Name__c&amp;&quot;||&quot;&amp;fcio1__Territory__r.fcio1__L3_Name__c&amp;&quot;||&quot;&amp;fcio1__Territory__r.fcio1__L4_Name__c&amp;&quot;||&quot;&amp;fcio1__Territory__r.fcio1__L5_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FC Territory Path</label>
        <type>Text</type>
    </fields>
</CustomObject>